Установи данные параметры в application.properties для автоматической генерации таблиц и вывода на коноль sql-запросов: spring.jpa.show-sql= spring.jpa.hibernate.ddl-auto= UserService:
Методы интерфейсов по-умолчанию public, явно прописывать не нужно;

User:

//отсутствует конструктор без аргументов;

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.thymeleaf.encoding=UTF-8
 
 server.error.include-exception=true
 server.error.include-stacktrace=always
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
